--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
+# macOS
+.DS_Store
+
+# IDE/editor
+.vscode/
+.idea/
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.pytest_cache/
+.mypy_cache/
+.coverage
+.coverage.*
+htmlcov/
+.venv/
+venv/
+env/
+dist/
+build/
+.eggs/
+*.egg-info/
+
+# Logs
+*.log
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Rust (vst_bridge)
+vst_bridge/target/
+vst_bridge/**/target/
+
 # Python virtual environment in ./na/
 na/
 
