--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ channels:
 dependencies:
   - cmake
   - cxx-compiler
-  - python=3.10
+  - python=3.13
   - pip
   - pyside6
   - pytorch
@@ -20,6 +20,7 @@ dependencies:
   - librosa
   - onnxruntime
   - resampy
+  - portaudio
 
   - pip:
     - sounddevice
