--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,15 +1,22 @@
 cmake_minimum_required(VERSION 3.15)
 project(gain_processor CXX)
 
+# --- Reusable function to copy target to directory ---
+function(copy_target_to_directory target_name destination_dir)
+    add_custom_command(TARGET ${target_name} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory "${destination_dir}"
+        COMMAND ${CMAKE_COMMAND} -E copy 
+            "$<TARGET_FILE:${target_name}>" 
+            "${destination_dir}/$<TARGET_FILE_NAME:${target_name}>"
+        COMMENT "Moving ${target_name} to ${destination_dir}"
+    )
+endfunction()
+
 # --- Target Definition ---
 add_library(gain_processor SHARED gain_processor.cpp)
 
-set_target_properties(gain_processor PROPERTIES
-    # General output directory for the DLL/shared library
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../plugins"
-    
-    # Explicitly set the output directory for the RELEASE configuration
-    # This is the key that overrides MSBuild's default of adding "/Release"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/../plugins"
-)
+# Define the target directory
+set(TARGET_DIR "${PROJECT_SOURCE_DIR}/../plugins")
 
+# Use the reusable function
+copy_target_to_directory(gain_processor "${TARGET_DIR}")
