--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ channels:
 dependencies:
   - cmake
   - cxx-compiler
-  - python=3.13
+  - python=3.11
   - pip
   - pyside6
   - pytorch
@@ -29,5 +29,5 @@ dependencies:
     - pylibrb
     - kokoro-onnx
     - misaki[en]
-    # - openai-whisper
-    # - webrtcvad-wheels
+    - openai-whisper
+    - webrtcvad-wheels
