--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -43,9 +43,9 @@ copy_target_to_directory(compressor_processor "${PROJECT_SOURCE_DIR}/../addition
 set(NAM_PATH ${nam_core_SOURCE_DIR})
 set(NAM_DEPS_PATH ${nam_core_SOURCE_DIR}/Dependencies)
 file(GLOB_RECURSE NAM_SOURCES ${NAM_PATH}/NAM/*.cpp  ${NAM_PATH}/NAM/*.c  ${NAM_PATH}/NAM/*.h)
-add_library(nam_processor SHARED nam_processor.cpp ${NAM_SOURCES})
-target_include_directories(nam_processor PRIVATE ${NAM_PATH} ${NAM_DEPS_PATH}/eigen ${NAM_DEPS_PATH}/nlohmann)
-target_compile_features(nam_processor PUBLIC cxx_std_20)
-target_compile_definitions(nam_processor PRIVATE NAM_SAMPLE_FLOAT)
+add_library(neural_amp_processor SHARED neural_amp_processor.cpp ${NAM_SOURCES})
+target_include_directories(neural_amp_processor PRIVATE ${NAM_PATH} ${NAM_DEPS_PATH}/eigen ${NAM_DEPS_PATH}/nlohmann)
+target_compile_features(neural_amp_processor PUBLIC cxx_std_20)
+target_compile_definitions(neural_amp_processor PRIVATE NAM_SAMPLE_FLOAT)
 
-copy_target_to_directory(nam_processor "${PROJECT_SOURCE_DIR}/../additional_plugins")
+copy_target_to_directory(neural_amp_processor "${PROJECT_SOURCE_DIR}/../additional_plugins")
